[package]
name = "ytapi"
version = "0.1.0"
authors = ["Kyle Coffey <kylecoffey1999@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
reqwest = { version = "0.10", features = ["blocking"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
console = "0.13"
dialoguer = "0.7"
indicatif = "0.15"
num_enum = "0.5"
oauth2 = "3.0"
google-youtube3 = "1.0"
